After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745920 - g-s-d power plugin: GDBus set_property doesn't set error
g-s-d power plugin: GDBus set_property doesn't set error
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
3.14.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2015-03-09 20:57 UTC by Simon McVittie
Modified: 2015-03-13 21:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: make sure to set an error when GDBus set_property fails (1.00 KB, patch)
2015-03-09 20:57 UTC, Simon McVittie
committed Details | Review

Description Simon McVittie 2015-03-09 20:57:24 UTC
Created attachment 298916 [details] [review]
power: make sure to set an error when GDBus set_property fails

If we return FALSE, the API is that the error must be set, and
GDBus asserts this.

---

Similar to Bug #706858, the power plugin's set_property callback doesn't set the error.

This is a possible cause for a crash (assertion failure) in Debian: <https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=775877> (although I will admit I'm patching this rather blindly, because I don't have a proper backtrace and I don't know how to reproduce the crash).
Comment 1 Bastien Nocera 2015-03-09 21:55:04 UTC
Review of attachment 298916 [details] [review]:

Looks good.
Comment 2 Simon McVittie 2015-03-13 21:33:14 UTC
Thanks, applied as 4e8448a for 3.15.92, d91542c for 3.14.3
Comment 3 Simon McVittie 2015-03-13 21:33:54 UTC
Review of attachment 298916 [details] [review]:

committed