power: make sure to set an error when GDBus set_property fails

If we return FALSE, the API is that the error must be set, and
GDBus asserts this.

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=745920
Bug-Debian: https://bugs.debian.org/775877
Reviewed-by: Bastien Nocera